# randfig

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-docs.txt
.github/workflows/: release.yaml
configs/: config.yaml  config_0.yaml  config_0_without_removings.yaml
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  randfig.html  randfig.rst  randfig.transforms.html  search.html  searchindex.js
docs/_sources/: modules.rst.txt  randfig.transforms.rst.txt
notebooks/: 1.0-jpm-params-eda.ipynb  2.0-jpm-generated-randfigs-eda.ipynb  3.0-jpm-wandb-runs.ipynb  4.0-jpm-ge_advance-vs-random_scanner.ipynb
randfig/: .expressions.py.swp  __init__.py  decorators.py  expressions.py  formula.py  insert.py  nest.py  remove.py  save.py  unnest.py  utils.py
randfig/tests/: test_compose.py  test_expressions.py  test_formula.py  test_insert.py  test_nest.py  test_remove.py  test_save.py  test_utils.py
randfig/transforms/: __init__.py  compose.py  formula.py  insert.py  nest.py  remove.py  save.py  unpack.py
scanner_params/: params_stats.csv  scanners_params.csv  simset_materials.csv
scripts/: generate.py
tests/: .test_expressions.py.swp  test_compose.py  test_decorators.py  test_expressions.py  test_formula.py  test_insert.py  test_nest.py  test_remove.py  test_save.py  test_unpack.py  test_utils.py
