[tool.poetry]
name = "randfig"
version = "0.1.0"
description = "A small framework for configuration generation."
authors = ["YerePhy <jereasap@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "1.24.1"
scipy = "1.10.1"
pyaml = "21.10.1"
pexpect = "4.8.0"
pyprojroot = "0.3.0"
ruamel-yaml = "0.17.21"

[tool.poetry.group.dev.dependencies]
matplotlib = "3.6.3"
pandas = "1.5.2"
pytest = "7.1.3"
seaborn = "0.12.2"
hydra-core  = "1.3"

[tool.poetry.group.docs.dependencies]
sphinx = "6.1.3"
sphinxcontrib-napoleon = "0.7"
pydata-sphinx-theme = "0.13.1"
sphinx-autodoc-typehints = "1.22"
sphinx-exec-code = "0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
